# task_manager

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml
src/: main.rs  mainTest.rs
src/controllers/: controller.rs
src/database/: database.rs
src/models/: models.rs
src/schemas/: schema.rs
