[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
oauth2 = "4.4.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.3.0"
serde_json = "1.0.64"
